@@ -41,7 +41,7 @@
   "definitions/types/races.json" : 939625505394788874,
   "definitions/types/roomTypes.json" : 1594665390665643069,
   "definitions/types/wallTypes.json" : 6784579661834773645,
-  "definitions/weatherTypes.json" : -7325183260437526079,
+  "definitions/weatherTypes.json" : 7741896846785670098,
   "music/*.ogg" : 9123158227303627920,
   "settings/dailyWeather.json" : -5476852410392248731,
   "settings/immigrationSettings.json" : 9010481837747930011,
