@@ -40,7 +40,7 @@
     "oxidises": true,
     "chanceToExtinguishFire": 0.7,
     "accumulatesSnowPerHour": -0.4,
-    "lightningStrikesPerHour": 2.0,
+    "lightningStrikesPerHour": 1.0,
     "happinessModifiers": {
       "STANDING": "CAUGHT_IN_RAIN",
       "WORKING": "WORKED_IN_RAIN",
@@ -53,7 +53,7 @@
     "maxSunlight": "#DDDDDD",
     "dayAmbienceSoundAssetName": "Isolated thunder",
     "nightAmbienceSoundAssetName": "Isolated thunder",
-    "lightningStrikesPerHour": 1.0
+    "lightningStrikesPerHour": 0.7
   },
   {
     "name": "Snow",
