@@ -1,3 +1,7 @@
+Alpha 8.0.1 - 10th November 2021
+
+- Fix for crafting jobs which got stuck with an inaccessible job location
+
 Alpha 8 - 9th November 2021
 
 - Reworked HUMANOID entities into more generic CREATURE entity type
